<resources>
    <string name="app_name">MarketPlaceApp</string>
    <string name="timeline">Timeline</string>
    <string name="my_market">My market</string>
    <string name="my_fares">My fares</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="content_description_search">Search Icon</string>
    <string name="content_description_profile">Profile icon</string>
    <string name="app_name_2">Bazaar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="click_here">Click here</string>
    <string name="new_to_app">New to Bazaar?</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="personal_code">Email</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="reset_password">Forgot password</string>
    <string name="forgot_password_text">We will sen you an email with instructions on how to reset your password</string>
    <string name="email_me">Email me</string>
    <string name="error">Assistive text</string>
    <string name="full_name">Full name</string>
    <string name="phone_number">Phone number</string>
    <string name="username">Username</string>
    <string name="order_now">Order now</string>
    <string name="client_photo">Client Photo</string>
    <string name="give_us_details">Give us details about your fare</string>
    <string name="Loading">Loading…</string>
    <string name="bazaar">Bazaar</string>
    <string name="submit">Add Fare</string>
    <string name="title">Title</string>
    <string name="price_amount">Price/Amount</string>
    <string name="amount_helper_text">0/10</string>
    <string name="title_helper_text">0/30</string>
    <string name="available_amount">Available amount</string>
    <string name="short_description">Short description</string>
    <string name="description_helper_text">0/150</string>
    <string name="contact_details">Contact details</string>
    <string name="log_out">Log out</string>
    <string name="launch_my_fair">Launch my fair</string>
    <string name="preview_my_fair">Preview my fair</string>
    <string name="inactive">Inactive</string>
    <string name="active">Active</string>
    <string name="kg">KG</string>
    <string name="ron">RON</string>
    <string name="product_search_hint">Search between products</string>
    <string name="publish">Publish</string>
    <string name="amount">Amount</string>
    <string name="comments">Comments</string>
    <string name="my_order">My Order</string>
    <string name="cancel">Cancel</string>
    <string name="send_my_order">Send my order</string>
    <string name="L">L</string>
    <string name="revolut">Place your order and track it\'s availability before you send Revolut payment!</string>
    <string name="delete">Are you sure that you want to delete this product?</string>
    <string name="send_chat_message">Send a chat message</string>
    <string name="type">Type</string>
    <string name="type_helper_text">0/3</string>
    <string name="ongoing_sales">Ongoing Sales</string>
    <string name="ongoing_orders">Ongoing Orders</string>
    <string name="total_items">Total items</string>
    <string name="price_item">Price/item</string>
    <string name="sold_items">Sold items</string>
    <string name="review">Review</string>
    <string name="order_done">Please track your order under Ongoing Orders. Thank you!</string>


    <string-array name="filterBy">
        <item>Time</item>
        <item>Product</item>
        <item>Seller</item>
    </string-array>
</resources>