<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        android:contentDescription="@string/content_description_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/filter"
        android:icon="@drawable/ic_filter"
        android:title="@string/profile"
        android:contentDescription="@string/content_description_profile"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        android:contentDescription="@string/content_description_profile"
        app:showAsAction="ifRoom" />

</menu>