<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="30dp"
    android:minWidth="400dp"
    tools:context=".ui.timeline.MakeOrderDialogFragment">

    <TextView
        android:id="@+id/my_order_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/my_order"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/separator_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorHintText2"
        app:layout_constraintTop_toBottomOf="@id/my_order_text_view" />

    <ImageView
        android:id="@+id/owner_image_view"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator_view"
        tools:src="@drawable/avatar" />

    <TextView
        android:id="@+id/owner_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Kristina Watson"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/owner_image_view"
        app:layout_constraintTop_toTopOf="@id/separator_view" />

    <TextView
        android:id="@+id/product_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:scrollHorizontally="true"
        android:text="P{alinka}de prune"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/owner_name_text_view" />

    <TextView
        android:id="@+id/price_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:text="25 RON/l"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/product_name_text_view" />

    <ImageView
        android:id="@+id/active_inactive_image_view"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_active_product"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/price_text_view" />

    <TextView
        android:id="@+id/active_inactive_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="14dp"
        android:text="Active"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/active_inactive_image_view"
        app:layout_constraintTop_toBottomOf="@id/price_text_view" />

    <TextView
        android:id="@+id/date_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="50dp"
        android:text="12.07.2020"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/price_text_view" />

    <View
        android:id="@+id/separator_view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorHintText2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/active_inactive_image_view" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amount_text_view_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:hint="@string/amount"
        android:minWidth="320dp"
        android:textColorHint="@color/colorHintText"
        app:layout_constraintTop_toBottomOf="@+id/separator_view2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amount_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/comment_text_view_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:hint="@string/comments"
        android:minWidth="320dp"
        android:textColorHint="@color/colorHintText"
        app:helperText="@string/description_helper_text"
        app:layout_constraintTop_toBottomOf="@+id/amount_text_view_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/comment_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/revolut_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/revolut_icon"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@id/comment_text_view_layout"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/revolut_text_view"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/revolut"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/revolut_image_view"
        app:layout_constraintTop_toBottomOf="@id/comment_text_view_layout"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_button"
        android:layout_width="140dp"
        android:layout_height="42dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/black"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:cornerRadius="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/revolut_text_view" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/send_my_order_button"
        android:layout_width="140dp"
        android:layout_height="42dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/black"
        android:text="@string/send_my_order"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/revolut_text_view" />


</androidx.constraintlayout.widget.ConstraintLayout>